<resources>
    <string name="app_name" translatable="false">&appName;</string>
    <string name="vertical_separator" translatable="false">|</string>
    <string name="assistant_web_platform_link" translatable="false">subscribe.linphone.org</string>
    <string name="assistant_linphone_contact_us_link" translatable="false">linphone.org/contact</string>
    <string name="notification_channel_call_id" translatable="false">linphone_6.0_notification_call_id</string>
    <string name="notification_channel_incoming_call_id" translatable="false">linphone_6.0_notification_incoming_call_id</string>
    <string name="notification_channel_missed_call_id" translatable="false">linphone_6.0_notification_missed_call_id</string>
    <string name="notification_channel_service_id" translatable="false">linphone_6.0_notification_service_id</string>
    <string name="notification_channel_chat_id" translatable="false">linphone_6.0_notification_chat_id</string>
    <string name="notification_channel_without_ringtone_incoming_call_id" translatable="false">linphone_6.0.1_notification_incoming_call_id</string>
    <string name="notification_channel_account_error_id" translatable="false">linphone_6.1_account_error_id</string>
    <string name="notification_channel_call_redirection_id" translatable="false">linphone_6.2_call_redirection_id</string>
    <string name="emoji_love" translatable="false">❤️</string>
    <string name="emoji_thumbs_up" translatable="false">👍</string>
    <string name="emoji_laughing" translatable="false">😂</string>
    <string name="emoji_surprised" translatable="false">😮</string>
    <string name="emoji_tear" translatable="false">😢</string>
    <string name="help_about_open_source_licenses_title" translatable="false">GNU General Public License v3.0</string>
    <string name="help_about_open_source_licenses_subtitle" translatable="false">© Belledonne Communications 2010-2025</string>
    <string name="help_advanced_send_debug_logs_email_address" translatable="false">linphone-android@belledonne-communications.com</string>
    <string name="website_contact_url" translatable="false">https://linphone.org/contact</string>
    <string name="website_download_url" translatable="false">https://linphone.org/linphone-softphone</string>
    <string name="website_user_guide_url" translatable="false">https://linphone.org/en/docs/</string>
    <string name="website_privacy_policy_url" translatable="false">https://linphone.org/en/privacy-policy</string>
    <string name="website_terms_and_conditions_url" translatable="false">https://linphone.org/en/terms-of-use</string>
    <string name="web_platform_register_email_url" translatable="false">https://subscribe.linphone.org/register/email</string>
    <string name="web_platform_forgotten_password_url" translatable="false">https://subscribe.linphone.org</string>
    <string name="website_translate_weblate_url" translatable="false">https://weblate.linphone.org/</string>
    <string name="website_open_source_licences_usage_url" translatable="false">https://wiki.linphone.org/xwiki/wiki/public/view/Linphone/Third%20party%20components%20/#Hlinphone-android</string>
    <string name="conversation_end_to_end_encrypted_bottom_sheet_link" translatable="false"><u>https://linphone.org/en/features/#security</u></string>
    <string name="conversation_one_to_one_hidden_subject" translatable="false">Dummy subject</string>
    <string name="sip_address">SIP address</string>
    <string name="device_id">Device ID</string>
    <string name="sip_address_display_name">Display name</string>
    <string name="sip_address_domain">Domain</string>
    <string name="username">Username</string>
    <string name="authentication_id">Authentication ID (if different)</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="or">or</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <plurals name="days">
        <item quantity="one">%s day</item>
        <item quantity="other">%s days</item>
    </plurals>
    <string name="search">Search</string>
    <plurals name="selection_count_label">
        <item quantity="one">%s selected</item>
        <item quantity="other">%s selected</item>
    </plurals>
    <string name="dialog_deny">Deny</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_continue">Continue</string>
    <string name="dialog_call">Call</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_install">Install</string>
    <string name="dialog_do_not_show_anymore">Do not show this dialog anymore</string>
    <string name="dialog_no">No</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_remove">Remove</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_understood">Understood</string>
    <string name="dialog_do_not_cancel">Do not cancel</string>
    <string name="notification_channel_call_name">Active calls notifications</string>
    <string name="notification_channel_incoming_call_name">Incoming calls notifications</string>
    <string name="notification_channel_missed_call_name">Missed calls notifications</string>
    <string name="notification_channel_service_name">Service notification</string>
    <string name="notification_channel_service_desc">This service will run all the time to keep app alive and allow you to receive calls and messages without push notifications.</string>
    <string name="notification_channel_chat_name">Instant messages notifications</string>
    <string name="notification_channel_account_error_name">Account error notifications</string>
    <string name="notification_channel_call_redirection_name">Call redirection notifications</string>
    <string name="notification_chat_message_reaction_received">Reacted by %1$s to: %2$s</string>
    <string name="notification_mark_message_as_read">Mark as read</string>
    <string name="notification_reply_to_message">Reply</string>
    <string name="notification_missed_call">Missed call from %s</string>
    <string name="notification_missed_group_call">Missed group call: %s</string>
    <string name="notification_missed_calls">%s missed calls</string>
    <string name="notification_missed_call_title">Missed call</string>
    <string name="notification_push_received_title">&appName;</string>
    <string name="notification_push_received_message">Searching for new messages</string>
    <string name="notification_file_transfer_title">&appName;</string>
    <string name="notification_file_transfer_startup_message">File(s) transfer in progress</string>
    <plurals name="notification_file_transfer_upload">
        <item quantity="one">%s file being uploaded</item>
        <item quantity="other">%s files being uploaded</item>
    </plurals>
    <plurals name="notification_file_transfer_download">
        <item quantity="one">%s file being downloaded</item>
        <item quantity="other">%s files being downloaded</item>
    </plurals>
    <string name="notification_file_transfer_upload_download_message" translatable="false">%s, %s</string>
    <string name="notification_keep_app_alive_message">Click to open</string>
    <string name="notification_keep_app_alive_description">This notification keeps app alive while in background</string>
    <string name="notification_enable_speaker_for_call">Turn on speaker</string>
    <string name="notification_disable_speaker_for_call">Turn off speaker</string>
    <string name="notification_account_registration_error_title">Account %s registration failed!</string>
    <string name="notification_account_registration_error_message">Open &appName; to refresh the registration</string>
    <string name="notification_in_call_foreground_service_error_title">Your correspondent does not hear you!</string>
    <string name="notification_in_call_foreground_service_error_message">Click on this notification to fix it</string>
    <string name="notification_chat_message_hidden_content">&lt;redacted&gt;</string>
    <string name="notification_call_redirection_message">The call will be redirected through &appName; in 4 seconds unless you say otherwise.</string>
    <string name="notification_allow_call_redirection_title">Continue</string>
    <string name="notification_deny_call_redirection_title">Cancel redirection</string>
    <string name="welcome_page_title">Welcome</string>
    <string name="welcome_page_subtitle">in &appName;</string>
    <string name="welcome_page_1_message">A <b>secured</b>, <b>open source</b> and <b>French</b> communication app.</string>
    <string name="welcome_page_2_title">Secured</string>
    <string name="welcome_page_2_message">Your communications are safe thanks to our <b>end-to-end encryption</b>.</string>
    <string name="welcome_page_3_title">Open source</string>
    <string name="welcome_page_3_message">A <b>free</b> and open source application since <b>2001</b>.</string>
    <string name="phone_number_copied_to_clipboard_toast">Phone number copied into clipboard</string>
    <string name="sip_address_copied_to_clipboard_toast">SIP address copied into clipboard</string>
    <string name="new_account_configured_toast">New account configured</string>
    <string name="file_successfully_exported_to_media_store_toast">File has been exported to native gallery</string>
    <string name="export_file_to_media_store_error_toast">Error trying to export file to native gallery</string>
    <string name="file_successfully_exported_to_documents_toast">File has been exported to documents</string>
    <string name="export_file_to_documents_error_toast">Error trying to export file to documents</string>
    <string name="media_playback_low_volume_warning_toast">Media volume is low, you may not hear anything!</string>
    <string name="remote_provisioning_config_applied_toast">Configuration successfully applied</string>
    <string name="conversation_no_media_found">No media found…</string>
    <string name="conversation_media_list_title">Shared media</string>
    <string name="menu_add_address_to_contacts">Add to contacts</string>
    <string name="menu_see_existing_contact">See contact</string>
    <string name="menu_copy_sip_address">Copy SIP address</string>
    <string name="menu_delete_selected_item">Delete</string>
    <string name="menu_export_selected_item">Download</string>
    <string name="menu_share_selected_item">Share</string>
    <string name="content_description_go_back_icon">Go back</string>
    <string name="content_description_toggle_bottom_sheet">Expands/retracts bottom sheet</string>
    <string name="content_description_hang_up_call">Terminates the call</string>
    <string name="content_description_toggle_video">Enables/disables sending your camera feed</string>
    <string name="content_description_toggle_microphone">Mute/un-mute your microphone</string>
    <string name="content_description_change_output_audio_device">Changes output audio device</string>
    <string name="content_description_chat_open_emoji_picker">Opens emoji picker</string>
    <string name="managed_config_uri_title" translatable="false">Remote provisioning URL</string>
    <string name="managed_config_uri_description" translatable="false">URL of the XML configuration file to fetch and apply on startup.</string>
    <string name="managed_xml_config_title" translatable="false">Inline XML configuration</string>
    <string name="managed_xml_config_description" translatable="false">Raw XML provisioning content applied on startup.</string>
    <string name="managed_root_ca_title" translatable="false">Root CA certificate</string>
    <string name="managed_root_ca_description" translatable="false">PEM-encoded root certificate(s) used to validate TLS connections.</string>
</resources>